fixed alignemtn for phone services

--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ li > a:hover{
 h1 {
 	text-align: center;
 	font-family: 'Tangerine', serif;
-	font-size: 5vw;
+	font-size: 7vw;
 	margin: auto;
 }
 
